huge changelist with 1.8 changes, annotations, and more